--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -3,7 +3,13 @@ vich_uploader:
     mappings:
         user_images:
             uri_prefix: /uploads/profile_pictures
-            upload_destination: '%kernel.project_dir%/assets/imgs/profile_pictures'
+            upload_destination: '%kernel.project_dir%/public/uploads/profile_pictures'
+            delete_on_remove: true
+            delete_on_update: true
+            inject_on_load: false
+        challenge_images:
+            uri_prefix: /uploads/challenges
+            upload_destination: '%kernel.project_dir%/public/uploads/challenges'
             delete_on_remove: true
             delete_on_update: true
             inject_on_load: false
